building html forms ass2

--- a/block-BHaacj/index.html
+++ b/block-BHaacj/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <title>Assignment2</title>
     <link rel="stylesheet" href="C:\Users\sreeee\Desktop\Altcampus\TA-STYLE-building-html-forms-THaaaj\block-BHaacj\assets\stylesheet\style.css" />
-    <script
-      src="https://kit.fontawesome.com/814a0fdb0b.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/f10064b6c7.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header class="">
@@ -239,7 +236,7 @@
           <h2>africa</h2>
         </div>
         <div class="font-0">
-          <img src="assets/image/australia.png" alt="north-america" />
+          <img src="C:\Users\sreeee\Desktop\Altcampus\TA-STYLE-building-html-forms-THaaaj\block-BHaacj\assets\australia.png" alt="north-america" />
           <h2>australia</h2>
         </div>
         <div class="font-0">
